add hovering and focus effects, change background color to linear-gradient

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
     <link rel="stylesheet" type="text/javascript" href="./assets/js/style.js">
     <title>展树电子 Zhanshu</title>
@@ -70,6 +71,36 @@
                 
             </p>
         </section>
+
+        <ul>
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+        </ul>
+
+        <div class="showcase">
+            <div class="left">
+                <section class="second" >
+                    <p>1234</p>
+                </section>
+                <section class="second" >
+                    <p>567</p>
+                </section>
+            </div>
+
+            <div class="right">
+                <section class="second">
+                    <p>89</p>
+                </section>
+                <section class="second">
+                    <p>0</p>
+                </section>
+            </div>
+        </div>
+
+        <aside>
+
+        </aside>
 
     </main>
 
