add forms and files and icons

--- a/index.html
+++ b/index.html
@@ -126,6 +126,28 @@
         </p>
     </div>
     
+    <div class="forms"> 
+        <h2>Forms</h2>
+        <p><a href="#">Form 1</a></p>
+        <p><a href="#">Form 2</a></p>
+        <p><a href="#">Form 3</a></p>
+        <p><a href="#">Form 4</a></p>
+        <p><a href="#">Form 5</a></p>
+        <p><a href="#">Form 6</a></p>
+        <p><a href="#">Form 7</a></p>
+        <p><a href="#">Form 8</a></p>
+        <p><a href="#">Form 9</a></p>
+        <p><a href="#">Form 10</a></p>
+    </div>
+
+    <div class="resourceicon">
+        <h2>Resources</h2>
+        <p><a href="#">File 1</a></p>
+        <p><a href="#">File 2</a></p>
+        <p><a href="#">File 3</a></p>
+        <p><a href="#">File 4</a></p>
+        <p><a href="#">File 5</a></p>
+    </div>
 
     <footer>
         <p>&copy; 2021 上海展树电子有限公司</p>
