change the color of footer

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
     <footer>
         <p>&copy; 2021 上海展树电子有限公司</p>
-        <p>Shanghai Zhanshu Electronics Co., Ltd</p>
+        <p id="enfooter">Shanghai Zhanshu Electronics Co., Ltd</p>
     </footer>
 
 </body>
