multi-page site

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
 <body>
     <header>
         <h1>
-            上海展树电子有限公司
+            <a href="index.html">上海展树电子有限公司</a>
         </h1>
        
         <nav>
             <ul>
                 <li>
-                    <a href="#about">公司简介 About</a>
+                    <a href="assets/html/about.html" target="_blank">公司简介 About</a>
                 </li>
                 <li>
-                    <a href="#services">主营业务 Services</a>
+                    <a href="assets/html/services.html" target="_blank">主营业务 Services</a>
                 </li>
                 <li>
-                    <a href="#contact">联系方式 Contact</a>
+                    <a href="assets/html/contact.html" target="_blank">联系方式 Contact</a>
                 </li>
                 <li>
-                    <a href="#resources">资源 Resources</a>
+                    <a href="assets/html/resources.html" target="_blank">资源 Resources</a>
                 </li>
             </ul>
         </nav>
 
-        <h1 id="entitle">
-            Shanghai Zhanshu Electronics Co., Ltd
+        <h1 id="englishtitle">
+            <a href="index.html">Shanghai Zhanshu Electronics Co., Ltd</a>
         </h1>
     </header>
 
@@ -79,82 +79,7 @@
             </p>
         </section>
 
-        <div class="showcase">
-            <div class="left">
-                <section class="second" >
-                    <img src="https://img0.baidu.com/it/u=2869686237,2616097452&fm=26&fmt=auto" />
-                    <p>1Curabitur suscipit diam est, ut aliquam felis molestie quis. Duis magna ante, vehicula quis consectetur semper, gravida et lacus. Nulla blandit risus consequat velit sollicitudin, sit amet sollicitudin lectus maximus.</p>
-                </section>
-                <section class="second" >
-                    <img src="https://img0.baidu.com/it/u=1683320182,3585498714&fm=26&fmt=auto" />
-                    <p>2Curabitur suscipit diam est, ut aliquam felis molestie quis. Duis magna ante, vehicula quis consectetur semper, gravida et lacus. Nulla blandit risus consequat velit sollicitudin, sit amet sollicitudin lectus maximus.</p>
-                </section>
-            </div>
-
-            <div class="right">
-                <section class="second">
-                    <img src="https://img2.baidu.com/it/u=1347205451,3171151622&fm=26&fmt=auto" />
-                    <p>3Curabitur suscipit diam est, ut aliquam felis molestie quis. Duis magna ante, vehicula quis consectetur semper, gravida et lacus. Nulla blandit risus consequat velit sollicitudin, sit amet sollicitudin lectus maximus.</p>
-                </section>
-                <section class="second">
-                    <img src="https://img0.baidu.com/it/u=3204516961,1427172709&fm=26&fmt=auto" />
-                    <p>4Curabitur suscipit diam est, ut aliquam felis molestie quis. Duis magna ante, vehicula quis consectetur semper, gravida et lacus. Nulla blandit risus consequat velit sollicitudin, sit amet sollicitudin lectus maximus.</p>
-                </section>
-            </div>
-        </div>
-
     </main>
-
-    <div id="yellow">
-        <h2>Lorem Ipsum</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer magna sem, sagittis vel urna vehicula, malesuada tincidunt tellus. Donec non arcu rutrum, bibendum neque a, mollis dolor. Integer rhoncus erat in dapibus vulputate. Curabitur ut vulputate nulla. Fusce ultrices nibh urna. In hac habitasse platea dictumst. Curabitur varius nulla vel libero aliquam tempus. Suspendisse pretium accumsan dolor, non efficitur odio venenatis ut. Aliquam vel fermentum elit. Aliquam erat volutpat. Suspendisse nec consectetur sem. Proin malesuada purus sit amet risus iaculis ultrices. Suspendisse rutrum ornare mauris at venenatis. Proin nulla felis, tempor non nibh eget, laoreet posuere est. In vel tortor venenatis, ullamcorper nisl sed, fringilla diam.
-        </p>
-        <br>
-        <p>
-            Mauris sed fermentum urna. Praesent vestibulum, lacus non blandit placerat, odio leo congue nulla, ac imperdiet tellus eros et orci. Morbi ut neque lectus. Nulla non nisi mi. Suspendisse id urna malesuada elit scelerisque efficitur. Maecenas sed sagittis ante, at dictum elit. Donec hendrerit porta pharetra. Maecenas blandit auctor cursus. Praesent nulla dolor, pulvinar id lectus sit amet, egestas accumsan eros. Donec et malesuada magna. Ut sodales sit amet dui a pharetra. Donec auctor congue metus eu molestie. Ut pellentesque, velit nec commodo tempor, arcu nisi eleifend sem, ac suscipit mauris mauris eget sapien. Duis et sollicitudin dui.
-        </p>
-        <br>
-        <p class="pbottom">
-            Curabitur dapibus posuere ex, eu accumsan orci. Vestibulum interdum sollicitudin lacus, sit amet pellentesque enim luctus ac. Vestibulum ac ex in dolor efficitur feugiat. Mauris eu nisl at orci tincidunt mollis. Nulla rutrum nisi quis quam aliquam finibus. Aenean luctus libero eget imperdiet fringilla. Cras interdum sem eget gravida pellentesque. Nam porta varius dictum. Vestibulum mi mauris, bibendum iaculis elementum ac, rutrum pulvinar lacus. Aenean lacinia congue mauris mollis sodales. Nullam pellentesque a ipsum sit amet gravida. Aenean enim quam, lacinia et tellus nec, scelerisque porta ligula.</p>
-        </p>
-        <br>
-        <h2>Lorem Ipsum</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer magna sem, sagittis vel urna vehicula, malesuada tincidunt tellus. Donec non arcu rutrum, bibendum neque a, mollis dolor. Integer rhoncus erat in dapibus vulputate. Curabitur ut vulputate nulla. Fusce ultrices nibh urna. In hac habitasse platea dictumst. Curabitur varius nulla vel libero aliquam tempus. Suspendisse pretium accumsan dolor, non efficitur odio venenatis ut. Aliquam vel fermentum elit. Aliquam erat volutpat. Suspendisse nec consectetur sem. Proin malesuada purus sit amet risus iaculis ultrices. Suspendisse rutrum ornare mauris at venenatis. Proin nulla felis, tempor non nibh eget, laoreet posuere est. In vel tortor venenatis, ullamcorper nisl sed, fringilla diam.
-        </p>
-        <br>
-        <p>
-            Mauris sed fermentum urna. Praesent vestibulum, lacus non blandit placerat, odio leo congue nulla, ac imperdiet tellus eros et orci. Morbi ut neque lectus. Nulla non nisi mi. Suspendisse id urna malesuada elit scelerisque efficitur. Maecenas sed sagittis ante, at dictum elit. Donec hendrerit porta pharetra. Maecenas blandit auctor cursus. Praesent nulla dolor, pulvinar id lectus sit amet, egestas accumsan eros. Donec et malesuada magna. Ut sodales sit amet dui a pharetra. Donec auctor congue metus eu molestie. Ut pellentesque, velit nec commodo tempor, arcu nisi eleifend sem, ac suscipit mauris mauris eget sapien. Duis et sollicitudin dui.
-        </p>
-        <br>
-        <p class="pbottom">
-            Curabitur dapibus posuere ex, eu accumsan orci. Vestibulum interdum sollicitudin lacus, sit amet pellentesque enim luctus ac. Vestibulum ac ex in dolor efficitur feugiat. Mauris eu nisl at orci tincidunt mollis. Nulla rutrum nisi quis quam aliquam finibus. Aenean luctus libero eget imperdiet fringilla. Cras interdum sem eget gravida pellentesque. Nam porta varius dictum. Vestibulum mi mauris, bibendum iaculis elementum ac, rutrum pulvinar lacus. Aenean lacinia congue mauris mollis sodales. Nullam pellentesque a ipsum sit amet gravida. Aenean enim quam, lacinia et tellus nec, scelerisque porta ligula.</p>
-        </p>
-    </div>
-    
-    <div class="forms"> 
-        <h2>Forms</h2>
-        <p><a href="#">Form 1</a></p>
-        <p><a href="#">Form 2</a></p>
-        <p><a href="#">Form 3</a></p>
-        <p><a href="#">Form 4</a></p>
-        <p><a href="#">Form 5</a></p>
-        <p><a href="#">Form 6</a></p>
-        <p><a href="#">Form 7</a></p>
-        <p><a href="#">Form 8</a></p>
-        <p><a href="#">Form 9</a></p>
-        <p><a href="#">Form 10</a></p>
-    </div>
-
-    <div class="resourceicon">
-        <h2>Resources</h2>
-        <p><a href="#">File 1</a></p>
-        <p><a href="#">File 2</a></p>
-        <p><a href="#">File 3</a></p>
-        <p><a href="#">File 4</a></p>
-        <p><a href="#">File 5</a></p>
-    </div>
 
     <footer>
         <p>&copy; 2021 上海展树电子有限公司</p>
