relink javascript file

--- a/assets/html/services.html
+++ b/assets/html/services.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/javascript" href="../js/style.js">
 
     <!-- Add favicon and enter the source folder name -->
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
@@ -74,6 +73,8 @@
         <p>&copy; 2021 上海展树电子有限公司</p>
         <p id="enfooter">Shanghai Zhanshu Electronics Co., Ltd</p>
     </footer>
+    
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
