--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <link rel="stylesheet" type="text/javascript" href="./assets/js/style.js">
 
     <!-- Add favicon and enter the source folder name -->
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon_io/apple-touch-icon.png">
@@ -86,6 +85,7 @@
         <p id="enfooter">Shanghai Zhanshu Electronics Co., Ltd</p>
     </footer>
 
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
