addEventListener to the contact page

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <h1>
-            <a href="../../index.html" target="_blank">上海展树电子有限公司</a>
+            <a href="../../index.html">上海展树电子有限公司</a>
         </h1>
        
         <nav>
@@ -27,19 +27,19 @@
                     <a href="about.html">公司简介 About</a>
                 </li>
                 <li>
-                    <a href="services.html" target="_blank">主营业务 Services</a>
+                    <a href="services.html">主营业务 Services</a>
                 </li>
                 <li>
-                    <a href="contact.html" target="_blank">联系方式 Contact</a>
+                    <a href="contact.html">联系方式 Contact</a>
                 </li>
                 <li>
-                    <a href="resources.html" target="_blank">资源 Resources</a>
+                    <a href="resources.html">资源 Resources</a>
                 </li>
             </ul>
         </nav>
 
         <h1 id="englishtitle">
-            <a href="../../index.html" target="_blank">Shanghai Zhanshu Electronics Co., Ltd</a>
+            <a href="../../index.html">Shanghai Zhanshu Electronics Co., Ltd</a>
         </h1>
     </header>
 
