--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -18,28 +18,28 @@
 <body>
     <header>
         <h1>
-            <a href="../../index.html" target="_blank">上海展树电子有限公司</a>
+            <a href="../../index.html">上海展树电子有限公司</a>
         </h1>
        
         <nav>
             <ul>
                 <li>
-                    <a href="about.html" target="_blank">公司简介 About</a>
+                    <a href="about.html">公司简介 About</a>
                 </li>
                 <li>
-                    <a href="services.html" target="_blank">主营业务 Services</a>
+                    <a href="services.html">主营业务 Services</a>
                 </li>
                 <li>
                     <a href="contact.html">联系方式 Contact</a>
                 </li>
                 <li>
-                    <a href="resources.html" target="_blank">资源 Resources</a>
+                    <a href="resources.html">资源 Resources</a>
                 </li>
             </ul>
         </nav>
 
         <h1 id="englishtitle">
-            <a href="../../index.html" target="_blank">Shanghai Zhanshu Electronics Co., Ltd</a>
+            <a href="../../index.html">Shanghai Zhanshu Electronics Co., Ltd</a>
         </h1>
     </header>
 
@@ -48,11 +48,11 @@
         <p>For more information about our company and services, please contact us using the form below.</p>
 
         <label>Name: </label>
-        <input id="name" type="text" placeholder="First Name, Last Name" />
+        <input id="name" type="text" />
         <br>
 
         <label>Email: </label>
-        <input id="email" type="text" placeholder="0000000@example.com" />
+        <input id="email" type="text" />
         <br>
 
         <label>Reason for Contact: </label>
@@ -65,14 +65,15 @@
         <br>
 
         <label>Subject: </label>
-        <input id="subject" type="text" placeholder="Subject" />
+        <input id="subject" type="text" />
         <br>
 
         <label>Message: </label>
-        <input id="message" type="text" placeholder="Leave your message here" />
+        <input id="message" type="text" placeholder="This is a test form. Your message won't be directed anywhere. But you can click on 'submit' to test its function." />
         <br>
 
-        <button>Submit</button>
+        <button id="submit">Submit</button>
+        <span id="response"></span>
     </form>
 
     <footer>
