--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <nav>
             <ul>
                 <li>
-                    <a href="assets/html/about.html" target="_blank">公司简介 About</a>
+                    <a href="assets/html/about.html">公司简介 About</a>
                 </li>
                 <li>
-                    <a href="assets/html/services.html" target="_blank">主营业务 Services</a>
+                    <a href="assets/html/services.html">主营业务 Services</a>
                 </li>
                 <li>
-                    <a href="assets/html/contact.html" target="_blank">联系方式 Contact</a>
+                    <a href="assets/html/contact.html">联系方式 Contact</a>
                 </li>
                 <li>
-                    <a href="assets/html/resources.html" target="_blank">资源 Resources</a>
+                    <a href="assets/html/resources.html">资源 Resources</a>
                 </li>
             </ul>
         </nav>
