update about page with real content

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <h1>
-            <a href="../../index.html">上海展树电子有限公司</a>
+            <a href="../../index.html">上海展树电子工程有限公司</a>
         </h1>
        
         <nav>
@@ -44,31 +44,23 @@
     </header>
 
     <div id="green">
-        <h2>Lorem Ipsum</h2>
+        <h2>简介 About</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer magna sem, sagittis vel urna vehicula, malesuada tincidunt tellus. Donec non arcu rutrum, bibendum neque a, mollis dolor. Integer rhoncus erat in dapibus vulputate. Curabitur ut vulputate nulla. Fusce ultrices nibh urna. In hac habitasse platea dictumst. Curabitur varius nulla vel libero aliquam tempus. Suspendisse pretium accumsan dolor, non efficitur odio venenatis ut. Aliquam vel fermentum elit. Aliquam erat volutpat. Suspendisse nec consectetur sem. Proin malesuada purus sit amet risus iaculis ultrices. Suspendisse rutrum ornare mauris at venenatis. Proin nulla felis, tempor non nibh eget, laoreet posuere est. In vel tortor venenatis, ullamcorper nisl sed, fringilla diam.
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp上海展树电子工程有限公司是专业从事智能化系统，小区、校区、办公大厦、酒店以及工厂等智能化系统的设计、施工、维护和监控器材的销售，是科技技术型专业单位。
         </p>
-        <br>
         <p>
-            Mauris sed fermentum urna. Praesent vestibulum, lacus non blandit placerat, odio leo congue nulla, ac imperdiet tellus eros et orci. Morbi ut neque lectus. Nulla non nisi mi. Suspendisse id urna malesuada elit scelerisque efficitur. Maecenas sed sagittis ante, at dictum elit. Donec hendrerit porta pharetra. Maecenas blandit auctor cursus. Praesent nulla dolor, pulvinar id lectus sit amet, egestas accumsan eros. Donec et malesuada magna. Ut sodales sit amet dui a pharetra. Donec auctor congue metus eu molestie. Ut pellentesque, velit nec commodo tempor, arcu nisi eleifend sem, ac suscipit mauris mauris eget sapien. Duis et sollicitudin dui.
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp公司紧跟最新网络和智能化技术发展趋势，积极参与企业智能化系统的应用和研习开发推广工作，在综合布线、安全防范、网络管理、智能控制、远程监控、移动监控、数字监控、ERP系统、消防、软件技术等方面具有专业的设计和施工经验。公司依托深圳和香港科技园雄厚的科技底蕴，与多家高科企业和科研机构建立了合作关系，坚持“以人为本，以科技为先导”不断探索与创新的理念，先后引进国内外先进网络系统和宽频共缆监控系统，并以最先使用新型的视频通讯填补了业内空白，并具有性能稳定、工程简单和价格低的优势。
         </p>
-        <br>
+        <p>
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp我们一直以“产品质量过硬、价格合理和优质服务做为公司的成功基础”，深深体会这一点，为此努力完善，规范企业管理平台和技术创新体系，适应不断变化的市场需求，把握科学技术应用趋向，深入分析不同客户的特定需求，真诚为客户提供最佳性能的产品和贴心的售后服务。
+        </p>
         <p class="pbottom">
-            Curabitur dapibus posuere ex, eu accumsan orci. Vestibulum interdum sollicitudin lacus, sit amet pellentesque enim luctus ac. Vestibulum ac ex in dolor efficitur feugiat. Mauris eu nisl at orci tincidunt mollis. Nulla rutrum nisi quis quam aliquam finibus. Aenean luctus libero eget imperdiet fringilla. Cras interdum sem eget gravida pellentesque. Nam porta varius dictum. Vestibulum mi mauris, bibendum iaculis elementum ac, rutrum pulvinar lacus. Aenean lacinia congue mauris mollis sodales. Nullam pellentesque a ipsum sit amet gravida. Aenean enim quam, lacinia et tellus nec, scelerisque porta ligula.</p>
+            &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp公司感谢各界的大力支持和关爱。我们将一如既往，本着“追求无止境”的精神，以诚信为本，以优质服务为保障，以技术创新求发展，缔造更完善的科技与您共享。
         </p>
-        <br>
-        <h2>Lorem Ipsum</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer magna sem, sagittis vel urna vehicula, malesuada tincidunt tellus. Donec non arcu rutrum, bibendum neque a, mollis dolor. Integer rhoncus erat in dapibus vulputate. Curabitur ut vulputate nulla. Fusce ultrices nibh urna. In hac habitasse platea dictumst. Curabitur varius nulla vel libero aliquam tempus. Suspendisse pretium accumsan dolor, non efficitur odio venenatis ut. Aliquam vel fermentum elit. Aliquam erat volutpat. Suspendisse nec consectetur sem. Proin malesuada purus sit amet risus iaculis ultrices. Suspendisse rutrum ornare mauris at venenatis. Proin nulla felis, tempor non nibh eget, laoreet posuere est. In vel tortor venenatis, ullamcorper nisl sed, fringilla diam.
-        </p>
-        <br>
-        <p>
-            Mauris sed fermentum urna. Praesent vestibulum, lacus non blandit placerat, odio leo congue nulla, ac imperdiet tellus eros et orci. Morbi ut neque lectus. Nulla non nisi mi. Suspendisse id urna malesuada elit scelerisque efficitur. Maecenas sed sagittis ante, at dictum elit. Donec hendrerit porta pharetra. Maecenas blandit auctor cursus. Praesent nulla dolor, pulvinar id lectus sit amet, egestas accumsan eros. Donec et malesuada magna. Ut sodales sit amet dui a pharetra. Donec auctor congue metus eu molestie. Ut pellentesque, velit nec commodo tempor, arcu nisi eleifend sem, ac suscipit mauris mauris eget sapien. Duis et sollicitudin dui.
-        </p>
-        <br>
-        <p class="pbottom">
-            Curabitur dapibus posuere ex, eu accumsan orci. Vestibulum interdum sollicitudin lacus, sit amet pellentesque enim luctus ac. Vestibulum ac ex in dolor efficitur feugiat. Mauris eu nisl at orci tincidunt mollis. Nulla rutrum nisi quis quam aliquam finibus. Aenean luctus libero eget imperdiet fringilla. Cras interdum sem eget gravida pellentesque. Nam porta varius dictum. Vestibulum mi mauris, bibendum iaculis elementum ac, rutrum pulvinar lacus. Aenean lacinia congue mauris mollis sodales. Nullam pellentesque a ipsum sit amet gravida. Aenean enim quam, lacinia et tellus nec, scelerisque porta ligula.</p>
-        </p>
+        <br/>
+        <div id="directoryContainer">
+            <div id="directory"></div>
+        </div>  
     </div>
 
     <footer>
