add dropdown menu to substitute for navbar

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -16,79 +16,82 @@
 </head>
 
 <body>
-    <div id="pageContainer">
-        <div id="contentWrap">
-            <header>
-                <h1>
-                    <a href="../../index.html">上海展树电子工程有限公司</a>
-                </h1>
-            
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="about.html">公司简介<br/>About</a>
-                        </li>
-                        <li>
-                            <a href="services.html">主营业务<br/>Services</a>
-                        </li>
-                        <li>
-                            <a href="news.html">新闻动态<br/>News</a>
-                        </li>
-                        <li>
-                            <a href="contact.html">联系方式<br/>Contact</a>
-                        </li>
-                        <li>
-                            <a href="resources.html">资源<br/>Resources</a>
-                        </li>
-                    </ul>
-                </nav>
+    <header>
+        <h1>
+            <a href="../../index.html">上海展树电子工程有限公司</a>
+        </h1>
 
-                <h1 id="englishtitle">
-                    <a href="../../index.html">Shanghai Zhanshu Electronics Co., Ltd</a>
-                </h1>
-            </header>
-
-            <main>
-                <div id="green">
-                    <h2>简介 About</h2>
-                    <p>
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp上海展树电子工程有限公司成立于2010年9月6号，专业从事消防、小区、校区、办公大厦、酒店以及工厂等智能化系统的设计、施工、维护和监控器材的销售，是科技技术型专业单位。
-                    </p>
-                    <p>
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp公司紧跟最新网络和智能化技术发展趋势，积极参与企业智能化系统的应用和研习开发推广工作，在综合布线、安全防范、网络管理、智能控制、远程监控、移动监控、数字监控、ERP系统、消防、软件技术等方面具有专业的设计和施工经验。公司依托深圳和香港科技园雄厚的科技底蕴，与多家高科企业和科研机构建立了合作关系，坚持“以人为本，以科技为先导”不断探索与创新的理念，先后引进国内外先进网络系统和宽频共缆监控系统，并以最先使用新型的视频通讯填补了业内空白，并具有性能稳定、操作简单和价格合理的优势。
-                    </p>
-                    <p>
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp我们一直以“产品质量过硬、价格合理和优质服务”做为公司的成功基础，深深体会这一点，为此努力完善，规范企业管理平台和技术创新体系，适应不断变化的市场需求，把握科学技术应用趋向，深入分析不同客户的特定需求，真诚为客户提供最佳性能的产品和贴心的售后服务。
-                    </p>
-                    <p class="pbottom">
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp公司感谢各界的大力支持和关爱。我们将一如既往，本着“追求无止境”的精神，以诚信为本，以优质服务为保障，以技术创新求发展，缔造更完善的科技与您共享。
-                    </p>
-                    <br/><br/>
-                    <div id="directoryContainer">
-                        <div id="directory"></div>
-                    </div>  
-                    <br/><br/>
-                    <div id="certificateContainer">
-                        <div id="certificate"></div>
-                    </div>
-                </div>
-            </main>
+        <div class="dropdown">
+            <button class="dropdownbtn">菜单</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="about.html">公司简介 About</a>
+                <a href="services.html">主营业务 Services</a>
+                <a href="news.html">新闻动态 News</a>
+                <a href="contact.html">联系我们 Contact</a>
+                <a href="resources.html">资源下载 Resources</a>
+            </div>
         </div>
+    
+        <nav>
+            <ul>
+                <li class="listItems">
+                    <a href="about.html">公司简介<br/>About</a>
+                </li>
+                <li class="listItems">
+                    <a href="services.html">主营业务<br/>Services</a>
+                </li>
+                <li class="listItems">
+                    <a href="news.html">新闻动态<br/>News</a>
+                </li>
+                <li class="listItems">
+                    <a href="contact.html">联系我们<br/>Contact</a>
+                </li>
+                <li class="listItems">
+                    <a href="resources.html">资源下载<br/>Resources</a>
+                </li>
+            </ul>
+        </nav>
 
-        <footer id="footer">
-            <div class="right">
-                <p>地址 Add: 上海嘉定区芳林路888弄5号</p>
-                <p>手机 Mob: 13285625555 13916298805</p>
-                <p>电话 Tel: 021-69022258</p>
-                <p>传真 Fax: 021-69022258</p>
-                <p>邮件 Email: 997046079@qq.com</p>
+        <h1 id="englishtitle">
+            <a href="../../index.html">Shanghai Zhanshu Electronic Engineering Co., Ltd</a>
+        </h1>
+    </header>
+
+    <main>
+        <div id="green">
+            <h2>简介 About</h2>
+            <p>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp上海展树电子工程有限公司成立于2010年9月6号，专业从事消防、小区、校区、办公大厦、酒店以及工厂等智能化系统的设计、施工、维护和监控器材的销售，是科技技术型专业单位。
+            </p>
+            <p>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp公司紧跟最新网络和智能化技术发展趋势，积极参与企业智能化系统的应用和研习开发推广工作，在综合布线、安全防范、网络管理、智能控制、远程监控、移动监控、数字监控、ERP系统、消防、软件技术等方面具有专业的设计和施工经验。公司依托深圳和香港科技园雄厚的科技底蕴，与多家高科企业和科研机构建立了合作关系，坚持“以人为本，以科技为先导”不断探索与创新的理念，先后引进国内外先进网络系统和宽频共缆监控系统，并以最先使用新型的视频通讯填补了业内空白，并具有性能稳定、操作简单和价格合理的优势。
+            </p>
+            <p>
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp我们一直以“产品质量过硬、价格合理和优质服务”做为公司的成功基础，深深体会这一点，为此努力完善，规范企业管理平台和技术创新体系，适应不断变化的市场需求，把握科学技术应用趋向，深入分析不同客户的特定需求，真诚为客户提供最佳性能的产品和贴心的售后服务。
+            </p>
+            <p class="pbottom">
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp公司感谢各界的大力支持和关爱。我们将一如既往，本着“追求无止境”的精神，以诚信为本，以优质服务为保障，以技术创新求发展，缔造更完善的科技与您共享。
+            </p>
+            <br/><br/>
+            <div id="certificateContainer">
+                <div id="certificate"></div>
             </div>
-            <div class="left" id="footername">
-                <p>&copy; 2021 上海展树电子有限公司</p>
-                <p id="enfooter">Shanghai Zhanshu Electronics Co., Ltd</p>
-            </div>
-        </footer>
-    </div>
+        </div>
+    </main>
+
+    <footer id="footer">
+        <div class="right containerInFooter">
+            <p>地址 Add: 上海嘉定区芳林路888弄5号</p>
+            <p>手机 Mob: 13285625555 13916298805</p>
+            <p>电话 Tel: 021-69022258</p>
+            <p>传真 Fax: 021-69022258</p>
+            <p>邮箱 Email: 997046079@qq.com</p>
+        </div>
+        <div class="left containerInFooter" id="footername">
+            <p>&copy; 2021 上海展树电子工程有限公司</p>
+            <p id="enfooter">Shanghai Zhanshu Electronic Engineering Co., Ltd</p>
+        </div>
+    </footer>
 
     <script src="../js/script.js"></script>
 </body>
