--- a/index.html
+++ b/index.html
@@ -20,22 +20,33 @@
         <h1>
             <a href="index.html">上海展树电子工程有限公司</a>
         </h1>
+
+        <div class="dropdown">
+            <button class="dropdownbtn">菜单</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="assets/html/about.html">公司简介 About</a>
+                <a href="assets/html/services.html">主营业务 Services</a>
+                <a href="assets/html/news.html">新闻动态 News</a>
+                <a href="assets/html/contact.html">联系我们 Contact</a>
+                <a href="assets/html/resources.html">资源下载 Resources</a>
+            </div>
+        </div>
     
         <nav>
             <ul>
-                <li>
+                <li class="listItems">
                     <a href="assets/html/about.html">公司简介<br/>About</a>
                 </li>
-                <li>
+                <li class="listItems">
                     <a href="assets/html/services.html">主营业务<br/>Services</a>
                 </li>
-                <li>
+                <li class="listItems">
                     <a href="assets/html/news.html">新闻动态<br/>News</a>
                 </li>
-                <li>
+                <li class="listItems">
                     <a href="assets/html/contact.html">联系我们<br/>Contact</a>
                 </li>
-                <li>
+                <li class="listItems">
                     <a href="assets/html/resources.html">资源下载<br/>Resources</a>
                 </li>
             </ul>
@@ -82,16 +93,16 @@
     </main>
 
     <footer id="footer">
-        <div class="right">
+        <div class="right containerInFooter">
             <p>地址 Add: 上海嘉定区芳林路888弄5号</p>
             <p>手机 Mob: 13285625555 13916298805</p>
             <p>电话 Tel: 021-69022258</p>
             <p>传真 Fax: 021-69022258</p>
-            <p>邮件 Email: 997046079@qq.com</p>
+            <p>邮箱 Email: 997046079@qq.com</p>
         </div>
-        <div class="left" id="footername">
-            <p>&copy; 2021 上海展树电子有限公司</p>
-            <p id="enfooter">Shanghai Zhanshu Electronics Co., Ltd</p>
+        <div class="left containerInFooter" id="footername">
+            <p>&copy; 2021 上海展树电子工程有限公司</p>
+            <p id="enfooter">Shanghai Zhanshu Electronic Engineering Co., Ltd</p>
         </div>
     </footer>
 
