change the location of the dropdown menu

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -21,17 +21,6 @@
             <a href="../../index.html">上海展树电子工程有限公司</a>
         </h1>
 
-        <div class="dropdown">
-            <button class="dropdownbtn">菜单</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="about.html">公司简介 About</a>
-                <a href="services.html">主营业务 Services</a>
-                <a href="news.html">新闻动态 News</a>
-                <a href="contact.html">联系我们 Contact</a>
-                <a href="resources.html">资源下载 Resources</a>
-            </div>
-        </div>
-    
         <nav>
             <ul>
                 <li class="listItems">
@@ -55,13 +44,25 @@
         <h1 id="englishtitle">
             <a href="../../index.html">Shanghai Zhanshu Electronic Engineering Co., Ltd</a>
         </h1>
+
+        <div class="dropdown">
+            <button class="dropdownbtn">菜单</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="about.html">公司简介 About</a>
+                <a href="services.html">主营业务 Services</a>
+                <a href="news.html">新闻动态 News</a>
+                <a href="contact.html">联系我们 Contact</a>
+                <a href="resources.html">资源下载 Resources</a>
+            </div>
+        </div>
+    
     </header>
 
     <main>
         <div id="green">
             <h2>简介 About</h2>
             <p>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp上海展树电子工程有限公司成立于2010年9月6号，专业从事消防、小区、校区、办公大厦、酒店以及工厂等智能化系统的设计、施工、维护和监控器材的销售，是科技技术型专业单位。
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp上海展树电子工程有限公司成立于2010年9月6号。我们专业从事技防、消防等弱电工程，主要服务于小区、校区、办公商务大厦、医院、酒店以及工厂等弱电智能化系统的工程设计、工程施工、工程维护和消防设备、监控器材的销售，是科技技术型专业单位。
             </p>
             <p>
                 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp公司紧跟最新网络和智能化技术发展趋势，积极参与企业智能化系统的应用和研习开发推广工作，在综合布线、安全防范、网络管理、智能控制、远程监控、移动监控、数字监控、ERP系统、消防、软件技术等方面具有专业的设计和施工经验。公司依托深圳和香港科技园雄厚的科技底蕴，与多家高科企业和科研机构建立了合作关系，坚持“以人为本，以科技为先导”不断探索与创新的理念，先后引进国内外先进网络系统和宽频共缆监控系统，并以最先使用新型的视频通讯填补了业内空白，并具有性能稳定、操作简单和价格合理的优势。
@@ -81,10 +82,10 @@
 
     <footer id="footer">
         <div class="right containerInFooter">
-            <p>地址 Add: 上海嘉定区芳林路888弄5号</p>
-            <p>手机 Mob: 13285625555 13916298805</p>
-            <p>电话 Tel: 021-69022258</p>
-            <p>传真 Fax: 021-69022258</p>
+            <p>地址 Add: 上海市宝山区上大路668号1幢581N</p>
+            <p>手机 Mob: 13916298805</p>
+            <p>电话 Tel: 021-66771037</p>
+            <p>传真 Fax: 021-66771037</p>
             <p>邮箱 Email: 997046079@qq.com</p>
         </div>
         <div class="left containerInFooter" id="footername">
