update on the styling of the header of the home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>
+        <h1 id="chineseTitle">
             <a href="index.html">上海展树电子工程有限公司</a>
         </h1>
 
@@ -41,12 +41,12 @@
             </ul>
         </nav>
 
-        <h1 id="englishtitle">
+        <h1 id="englishTitle">
             <a href="index.html">Shanghai Zhanshu Electronic Engineering Co., Ltd</a>
         </h1>
 
         <div class="dropdown">
-            <button class="dropdownbtn">菜单</button>
+            <button class="dropdownbtn">菜单 Menu</button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="assets/html/about.html">公司简介 About</a>
                 <a href="assets/html/services.html">主营业务 Services</a>
