update the styling of the header in all other pages

--- a/assets/html/contact.html
+++ b/assets/html/contact.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>
+        <h1 id="chineseTitle">
             <a href="../../index.html">上海展树电子工程有限公司</a>
         </h1>
     
@@ -41,7 +41,7 @@
             </ul>
         </nav>
 
-        <h1 id="englishtitle">
+        <h1 id="englishTitle">
             <a href="../../index.html">Shanghai Zhanshu Electronic Engineering Co., Ltd</a>
         </h1>
 
@@ -84,7 +84,7 @@
             <br>
 
             <label>内容 Message: </label>
-            <input id="message" type="text" placeholder="这个功能还在建设中。This is a test form. You can click on 'submit' to test its function." />
+            <input id="message" type="text" placeholder="此功能正在建设中。This is a test form. You can click on 'submit' to test its function." />
             <br>
 
             <button id="submit">提交 Submit</button>
