--- a/assets/html/news.html
+++ b/assets/html/news.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>
+        <h1 id="chineseTitle">
             <a href="../../index.html">上海展树电子工程有限公司</a>
         </h1>
 
@@ -41,7 +41,7 @@
             </ul>
         </nav>
 
-        <h1 id="englishtitle">
+        <h1 id="englishTitle">
             <a href="../../index.html">Shanghai Zhanshu Electronic Engineering Co., Ltd</a>
         </h1>
         
