--- a/assets/html/services.html
+++ b/assets/html/services.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <h1>
+        <h1 id="chineseTitle">
             <a href="../../index.html">上海展树电子工程有限公司</a>
         </h1>
                 
@@ -41,7 +41,7 @@
             </ul>
         </nav>
 
-        <h1 id="englishtitle">
+        <h1 id="englishTitle">
             <a href="../../index.html">Shanghai Zhanshu Electronic Engineering Co., Ltd</a>
         </h1>
 
@@ -61,26 +61,34 @@
         <div class="showcase">
             <div class="left">
                 <br><br>
-                <section class="second" >
-                    <img src="https://img0.baidu.com/it/u=2050043538,4070714108&fm=253&fmt=auto&app=120&f=JPEG?w=640&h=397" />
-                    <p>监控系统<br/>Monitor System</p>
-                </section>
-                <section class="second">
-                    <img src="https://img2.baidu.com/it/u=1559506908,592031146&fm=26&fmt=auto" />
-                    <p>维修保养<br/>Repair and Maintenance</p>
-                </section>
+                <div>
+                    <section class="second" >
+                        <img src="https://img0.baidu.com/it/u=2050043538,4070714108&fm=253&fmt=auto&app=120&f=JPEG?w=640&h=397" alt="监控系统照片 Monitor System Photo"/>
+                        <p>监控系统<br/>Monitor System</p>
+                    </section>
+                </div>
+                <div>
+                    <section class="second">
+                        <img src="https://img2.baidu.com/it/u=1559506908,592031146&fm=26&fmt=auto" alt="维修保养照片 Repair and Maintenance Photo"/>
+                        <p>维修保养<br/>Repair and Maintenance</p>
+                    </section>
+                </div>
             </div>
 
             <div class="right">
                 <br><br>
-                <section class="second" >
-                    <img src="https://img0.baidu.com/it/u=987067725,1145954487&fm=253&fmt=auto&app=120&f=JPEG?w=640&h=426" />
-                    <p>弱电智能化<br/>Weak Current Intelligent System</p>
-                </section>
-                <section class="second">
-                    <img src="../images/消防装备销售.jpg" href="../files/消防及应急救援行业产品手册.pdf"/>
-                    <p href="../files/消防及应急救援行业产品手册.pdf">消防装备销售<br/>Distribution of Fire Safety Equipment</p>
-                </section>
+                <div>
+                    <section class="second" >
+                        <img src="https://img0.baidu.com/it/u=987067725,1145954487&fm=253&fmt=auto&app=120&f=JPEG?w=640&h=426" alt="弱电智能化照片 Weak Current Intelligent System Photo"/>
+                        <p>弱电智能化<br/>Weak Current Intelligent System</p>
+                    </section>
+                </div>
+                <div>
+                    <section class="second">
+                        <img src="../images/消防装备销售.jpg" href="../files/消防及应急救援行业产品手册.pdf" alt="消防装备销售照片 Distribution of Fire Safety Equipment Photo"/>
+                        <p href="../files/消防及应急救援行业产品手册.pdf">消防装备销售<br/>Distribution of Fire Safety Equipment</p>
+                    </section>
+                </div>
             </div>     
         </div>
     </div>
