fix the header alignment issue

--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 
@@ -46,7 +47,7 @@
         </h1>
 
         <div class="dropdown">
-            <button class="dropdownbtn">菜单</button>
+            <button class="dropdownbtn">菜单 Menu</button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="about.html">公司简介 About</a>
                 <a href="services.html">主营业务 Services</a>
