fixed the broken image

--- a/assets/html/services.html
+++ b/assets/html/services.html
@@ -70,7 +70,7 @@
                 </div>
                 <div>
                     <section class="second">
-                        <img src="https://img2.baidu.com/it/u=1559506908,592031146&fm=26&fmt=auto" alt="维修保养照片 Repair and Maintenance Photo"/>
+                        <img src="https://cdn2.picryl.com/photo/2021/01/21/tech-sgt-shelly-pavcik-911th-maintenance-squadron-dfe684-1024.jpg" alt="维修保养照片 Repair and Maintenance Photo"/>
                         <p>维修保养<br/>Repair and Maintenance</p>
                     </section>
                 </div>
